Fixes for dark mode.

--- a/theme/lukaszkups2020/assets/css/main.sass
+++ b/theme/lukaszkups2020/assets/css/main.sass
@@ -144,6 +144,9 @@ body
   .footer-container
     width: 100%
 
+  .nav-container
+    height: inherit
+
   .white-bg
     background: $white
 
@@ -720,7 +723,15 @@ body
       .logo-wrapper,
       nav
         display: block
+        width: 100%
         clear: both
+        background: inherit
+        margin:
+          left: -10px
+          right: -10px
+        padding:
+          left: 10px
+          right: 10px
       .logo-wrapper
         margin: 10px 50% 0 calc(50% - 25px)
       nav
